# miniVllm

./: .gitignore  README.md  bench.py  example.py  example_windows.py  pyproject.toml  vllm_http_server.py  vllm_opanai_server.py
.trae/documents/: Analyze FlashAttention vs xFormers acceleration.md  Compare nano-vllm acceleration with vllm.md  Fix GQA broadcasting issue in xformers attention.md  Fix xformers BlockDiagonalCausalMask import error.md  为 nano-vllm 增加 xformers 加速支持.md
minivllm/: __init__.py  config.py
minivllm/engine/: block_manager.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
minivllm/layers/: activation.py  attention.py  embed_head.py  sampler.py
minivllm/models/: qwen3.py
minivllm/utils/: memory.py
nanovllm/engine/: model_runner.py  scheduler.py  sequence.py
nanovllm/layers/: attention.py  embed_head.py  layernorm.py  linear.py  rotary_embedding.py
nanovllm/models/: qwen3.py
tests/: test_attention_dtype.py
